--- a/.github/workflows/export-mastodon-list.yml
+++ b/.github/workflows/export-mastodon-list.yml
@@ -31,7 +31,11 @@ jobs:
         run: python -m pip install geotribu[all]
 
       - name: Export geotribu's mastodon lists and accounts
-        run: mkdir mastodon && geotribu social mastodon-export -w mastodon/export-mastodon
+        env:
+          GEOTRIBU_MASTODON_API_ACCESS_TOKEN: ${{ secrets.GEOTRIBU_MASTODON_API_ACCESS_TOKEN }}
+        run: |
+          mkdir mastodon
+          geotribu social mastodon-export -w mastodon/export-mastodon
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
