--- a/.github/workflows/export-mastodon-list.yml
+++ b/.github/workflows/export-mastodon-list.yml
@@ -1,12 +1,13 @@
 name: Export geotribu mastodon accounts and lists
 
 on:
-  push:
-    branches:
-      - main
+
   schedule:
     - cron: "0 5 * * SUN"  # weekly on sundays
   workflow_dispatch:     # to trigger manually
+  push:
+    branches:
+      - main
 
 env:
   LANG: "fr_FR.UTF-8"
@@ -43,4 +44,4 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: "mastodon/export-mastodon
+          path: "mastodon/export-mastodon"
