--- a/.github/workflows/export-mastodon-list.yml
+++ b/.github/workflows/export-mastodon-list.yml
@@ -43,4 +43,4 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: "mastodon/export-mastodon
+          path: mastodon/export-mastodon
