--- a/.github/workflows/export-mastodon-list.yml
+++ b/.github/workflows/export-mastodon-list.yml
@@ -16,19 +16,28 @@ env:
 jobs:
 
   run:
-
     runs-on: ubuntu-latest
+    if: github.repository == 'geotribu/geo-mastodon-comptes-listes/'
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
-
+      - name: Get source code
+        uses: actions/checkout@v4
+      
       - name: Set up Python
         uses: actions/setup-python@v5.0.0
         with:
+          cache: "pip"
+          cache-dependency-path: "requirements.txt"
           python-version: 3.12
 
       - name: Install dependencies
         # TODO: extra for mastodon only
-        run: python -m pip install geotribu[all]
+        run: |
+          python -m pip install -U pip setuptools wheel
+          python -m pip install -U -r requirements.txt
 
       - name: Export geotribu's mastodon lists and accounts
         env:
