--- a/.github/workflows/export-mastodon-list.yml
+++ b/.github/workflows/export-mastodon-list.yml
@@ -54,8 +54,15 @@ jobs:
         env:
           GEOTRIBU_MASTODON_API_ACCESS_TOKEN: ${{ secrets.GEOTRIBU_MASTODON_API_ACCESS_TOKEN }}
         run: |
-          mkdir mastodon
-          geotribu social mastodon-export -w mastodon/export-mastodon
+          geotribu social mastodon-export -w export/
+
+      - name: Save build doc as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: export-mastodon
+          path: export/
+          if-no-files-found: error
+          retention-days: 1
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
