--- a/.github/workflows/export-mastodon-list.yml
+++ b/.github/workflows/export-mastodon-list.yml
@@ -1,6 +1,9 @@
 name: Export geotribu mastodon accounts and lists
 
 on:
+  pull_request:
+    branches:
+      - main
   push:
     branches:
       - main
